--- a/numpy-basic 1.ipynb
+++ b/numpy-basic 1.ipynb
@@ -238,7 +238,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <span style=\"color:red\">3차원 -> (깊이, 행, 열)</span>"
+    "### <span style=\"color:red\">3차원 -> (깊이, 열, 행)</span>"
    ]
   },
   {
@@ -258,10 +258,22 @@
     }
    ],
    "source": [
-    "tensor = [[[1,2,3,4],[2,3,4,5],[3,4,5,6]],\n",
-    "         [[1,2,3,4],[2,3,4,5],[3,4,5,6]],\n",
-    "         [[1,2,3,4],[2,3,4,5],[3,4,5,6]],\n",
-    "         [[1,2,3,4],[2,3,4,5],[3,4,5,6]]]\n",
+    "tensor = [[[1,2,3,4],\n",
+    "           [2,3,4,5],\n",
+    "           [3,4,5,6]],\n",
+    "          \n",
+    "         [[1,2,3,4],\n",
+    "          [2,3,4,5],\n",
+    "          [3,4,5,6]],\n",
+    "          \n",
+    "         [[1,2,3,4],\n",
+    "          [2,3,4,5],\n",
+    "          [3,4,5,6]],\n",
+    "          \n",
+    "         [[1,2,3,4],\n",
+    "          [2,3,4,5],\n",
+    "          [3,4,5,6]]]\n",
+    "\n",
     "np.array(tensor, int).shape"
    ]
   },
@@ -419,39 +431,6 @@
    "source": [
     "### 다차원을 1차원 배열로 만들 때 : flatten()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1, 2, 3, 4, 2, 3, 4, 5, 3, 4, 5, 6, 1, 2, 3, 4, 2, 3, 4, 5, 3, 4,\n",
-       "       5, 6, 1, 2, 3, 4, 2, 3, 4, 5, 3, 4, 5, 6, 1, 2, 3, 4, 2, 3, 4, 5,\n",
-       "       3, 4, 5, 6])"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tensor = [[[1,2,3,4],[2,3,4,5],[3,4,5,6]],\n",
-    "         [[1,2,3,4],[2,3,4,5],[3,4,5,6]],\n",
-    "         [[1,2,3,4],[2,3,4,5],[3,4,5,6]],\n",
-    "         [[1,2,3,4],[2,3,4,5],[3,4,5,6]]]\n",
-    "np.array(tensor, int).flatten()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
