--- a/numpy_lab_ans.ipynb
+++ b/numpy_lab_ans.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,32 +212,258 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "def normalize_ndarray(X, axis=99, dtype=np.float32):\n",
-    "    pass\n",
-    "\n",
-    "\n",
+    "    if axis == 0:\n",
+    "        return [(X - X.mean(axis=0)) / X.std(axis=0)]\n",
+    "    elif axis == 1:\n",
+    "        return [(n - np.mean(n)) / np.std(n) for n in X]\n",
+    "    else:\n",
+    "        return [(X - X.mean()) / X.std()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.,  1.],\n",
+       "       [ 2.,  3.],\n",
+       "       [ 4.,  5.],\n",
+       "       [ 6.,  7.],\n",
+       "       [ 8.,  9.],\n",
+       "       [10., 11.]], dtype=float32)"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X = np.arange(12, dtype=np.float32).reshape(6,2)\n",
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([[-1.593255  , -1.3035723 ],\n",
+       "        [-1.0138896 , -0.7242068 ],\n",
+       "        [-0.4345241 , -0.14484136],\n",
+       "        [ 0.14484136,  0.4345241 ],\n",
+       "        [ 0.7242068 ,  1.0138896 ],\n",
+       "        [ 1.3035723 ,  1.593255  ]], dtype=float32)]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "normalize_ndarray(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([-1.,  1.], dtype=float32),\n",
+       " array([-1.,  1.], dtype=float32),\n",
+       " array([-1.,  1.], dtype=float32),\n",
+       " array([-1.,  1.], dtype=float32),\n",
+       " array([-1.,  1.], dtype=float32),\n",
+       " array([-1.,  1.], dtype=float32)]"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "normalize_ndarray(X, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([[-1.46385, -1.46385],\n",
+       "        [-0.87831, -0.87831],\n",
+       "        [-0.29277, -0.29277],\n",
+       "        [ 0.29277,  0.29277],\n",
+       "        [ 0.87831,  0.87831],\n",
+       "        [ 1.46385,  1.46385]], dtype=float32)]"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "normalize_ndarray(X, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def save_ndarray(X, filename=\"test.npy\"):\n",
-    "    pass\n",
-    "\n",
-    "\n",
+    "    np.save(filename, arr=X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = np.arange(32, dtype=np.float32).reshape(4, -1)\n",
+    "filename = \"test.npy\"\n",
+    "save_ndarray(X, filename) #test.npy 파일이 생성됨"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def boolean_index(X, condition):\n",
-    "    pass\n",
-    "\n",
-    "\n",
+    "    condition = eval(str(\"X\") + condition)\n",
+    "    return X[condition]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3.], dtype=float32)"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X = np.arange(32, dtype=np.float32).reshape(4, -1)\n",
+    "boolean_index(X, \"== 3\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 7.,  8.,  9., 10., 11., 12., 13., 14., 15., 16., 17., 18., 19.,\n",
+       "       20., 21., 22., 23., 24., 25., 26., 27., 28., 29., 30., 31.],\n",
+       "      dtype=float32)"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X = np.arange(32, dtype=np.float32)\n",
+    "boolean_index(X, \"> 6\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def find_nearest_value(X, target_value):\n",
-    "    pass\n",
-    "\n",
-    "\n",
+    "    return X[(np.abs(X - target_value)).argmin()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.29561542113413886"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X = np.random.uniform(0, 1, 100)\n",
+    "target_value = 0.3\n",
+    "find_nearest_value(X, target_value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def get_n_largest_values(X, n):\n",
-    "    pass\n"
+    "    X = np.sort(X)[::-1]\n",
+    "    return X[:n]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.99851051, 0.99465147, 0.99271281])"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X = np.random.uniform(0, 1, 100)\n",
+    "get_n_largest_values(X, 3)"
    ]
   }
  ],
